--- a/src/sass/master.scss
+++ b/src/sass/master.scss
@@ -20,6 +20,8 @@
 @import "components/buttons";
 @import "components/sections";
 @import "components/section-heading";
+@import "components/article";
+@import "components/separators";
 
 // 6. Vendors
 // sass-lint:disable
