--- a/src/sass/components/_section-heading.scss
+++ b/src/sass/components/_section-heading.scss
@@ -1,23 +1,12 @@
-.section-heading {
-  a {
-    text-decoration: none;
-
-    .heading-title {
-     // color: $color-copy-dark;
-    }
-  }
-
-  .heading-primary {
-    .heading {
-      &-title {
-        font-weight: 800;
-        text-transform: uppercase;
-        margin: 0.5em 0;
-
-        @media (max-width: $breakpoint-normal) {
-          margin: 0.5em 0 0 0;
-        }
-      }
-    }
+.heading-underline{
+  position: relative;
+&:after{
+  content:'';
+  position:absolute;
+  z-index: -1;
+  top:0.5em;
+  left:0;
+  width:100%;
+  border-bottom: 10px solid $color-primary;
   }
 }
