--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -47,6 +47,7 @@
     align-items: center;
     padding-left: 0;
     list-style: none;
+    margin: 0;
   }
 
   .menu-item{
@@ -66,9 +67,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
-
-    
+    justify-content: center;   
   }
 }
 
@@ -97,7 +96,7 @@
     font-family: $font-primary;
     font-weight: 600;
     font-size: 0.875em;
-    line-height: 1em;
+    line-height: 1;
   }
 
   .search-icon{
