added article component and responsive styles for header

--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,9 +1,10 @@
 // colors
 
 $color-copy-dark: #000000;
-$color-primary: #FFE600;
+$color-primary: #ffe600;
 $color-bg-white: #ffffff;
+$color-bg-muted: #1c1c1c;
 
 // fonts
-$font-primary: 'Roboto Condensed', sans-serif;
-$font-secondary: 'Rasa', serif;
+$font-primary: "Roboto Condensed", sans-serif;
+$font-secondary: "Rasa", serif;
