--- a/src/sass/components/_article.scss
+++ b/src/sass/components/_article.scss
@@ -1,22 +1,26 @@
-.article{
-    width: 100%;
+.article {
+  width: 100%;
 }
 
-.article-thumbnail{
-    position: relative;
-    width: 100%;
-    height: 0;
-    padding-top: calc(100%*1/4.7);
-    max-width: 36.875em;
+.article-thumbnail {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-top: 21%;
 
-    .thumbnail{
+  &.thumbnail-border {
+    margin: 0 0 0 auto;
+  }
+
+  .thumbnail {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    }
+    object-fit: cover;
+  }
 
-    .thumbnail-title{
+  .thumbnail-title {
     background-color: $color-bg-white;
     color: $color-copy-dark;
     font-weight: 700;
@@ -27,57 +31,106 @@
     margin-left: 1.875em;
     margin-right: 1.875em;
     text-transform: uppercase;
+  }
+
+  @media (max-width: $breakpoint-super-large) {
+    .thumbnail-title {
+      font-size: 1.25rem;
+      line-height: 1.25rem;
     }
+  }
 
-    .thumbnail-border{
-        position: absolute;
-        top: 0;
-        left: 0;
-
-        .border-piece{
-            position: absolute;
-            background-color: $color-primary;
-        }
-
+  @media (max-width: $breakpoint-extra-large) {
+    .thumbnail-title {
+      margin-left: 1em;
+      margin-right: 1em;
     }
+  }
+
+  @media (max-width: $breakpoint-large) {
+    .thumbnail-title {
+      font-size: 1rem;
+      line-height: 1rem;
+    }
+  }
 }
 
-.autor-wrapper{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-top: 1.25em;
+.thumbnail-border {
+  padding-top: calc(100% - 22.5em);
+  box-shadow: 0 40px 0 -24px;
+  max-width: 33.75em;
+  height: 100%;
+  max-height: 22.5em;
+}
 
-    .article-author{
-            font-weight: 400;
+.border-piece {
+  position: absolute;
+  top: 0;
+  width: 0;
+  height: 0;
+  border-top: 0px solid transparent;
+  border-bottom: 70px solid transparent;
+  border-left: 70px solid $color-bg-white;
+
+  &::before {
+    position: absolute;
+    top: 1.375em;
+    left: -3em;
+    width: 1.5625em;
+    height: 1.5625em;
+    content: "";
+    display: block;
+    background-color: $color-copy-dark;
+  }
+
+  &::after {
+    position: absolute;
+    top: 0;
+    left: -4.4375em;
+    width: 4.375em;
+    height: 4.375em;
+    content: "";
+    display: block;
+    border-top: 70px solid transparent;
+    border-right: 70px solid $color-primary;
+  }
+}
+
+.autor-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 1.25em;
+
+  .article-author {
+    font-weight: 400;
     font-size: 1.125em;
     font-family: $font-secondary;
     color: $color-copy-dark;
-        
-    }
+  }
 
-    .autor-title{
-        margin: 0 0 0 0.25em;
- font-weight: 700;
-    font-size: 1.125em;
-    font-family: $font-secondary;
-    color: $color-copy-dark;
-    }
-}
-
-.article-title{
+  .autor-title {
+    margin: 0 0 0 0.25em;
     font-weight: 700;
-    font-size: 1.625em;
-    text-transform: uppercase;
-    margin: 1.25em 0 0 0;
+    font-size: 1.125em;
+    font-family: $font-secondary;
+    color: $color-copy-dark;
+  }
 }
 
-.article-exept{
-    margin: 1.875em 0 2.375em 0;
+.article-title {
+  font-weight: 700;
+  font-size: 1.625em;
+  text-transform: uppercase;
+  margin: 1.25rem 0 0 0;
+}
 
-    .article-text{
-        font-size: 1.125em;
-        font-weight: 400;
-        line-height: 1.375;
-    }
+.article-exept {
+  margin: 1.875em 0 2.375em 0;
+
+  .article-text {
+    font-size: 1.125em;
+    font-weight: 400;
+    line-height: 1.375;
+  }
 }
