--- a/src/sass/components/_sections.scss
+++ b/src/sass/components/_sections.scss
@@ -1,58 +1,125 @@
-.section-articles{
-    margin: 1.875em 2em;
+.section-articles {
+  margin: 1.875em 2em;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+
+  .article {
+    width: 100%;
+    max-width: 36.875em;
+
+    &:not(:first-child) {
+      margin-left: 1.25em;
+    }
+
+    &:not(:last-child) {
+      margin-right: 1.25em;
+    }
+  }
+
+  @media (max-width: $breakpoint-medium) {
+    flex-direction: column;
+    margin: 0 0 1.75em 0;
+    .article {
+      max-width: 100%;
+
+      &:first-child {
+        margin: 0;
+        max-height: 19.625em;
+        padding-top: 50%;
+
+        .thumbnail {
+          height: calc(100% - 4em);
+        }
+
+        .thumbnail-title {
+          width: 100%;
+          padding: 1em 1.625em;
+          bottom: 0;
+          margin: 0;
+          height: 4em;
+          background-color: $color-bg-muted;
+          color: $color-bg-white;
+        }
+      }
+
+      &:not(:first-child) {
+        background-color: $color-copy-dark;
+        display: flex;
+        flex-direction: row;
+        margin: 0;
+        padding-top: 24%;
+
+        .article-thumbnail {
+          max-width: 100%;
+          height: 100%;
+        }
+
+        .thumbnail {
+          width: 100%;
+          max-width: 25%;
+          margin: 1.375em;
+        }
+
+        .thumbnail-title {
+          max-width: 65%;
+          right: 0;
+          top: 0;
+          background-color: $color-copy-dark;
+          color: $color-bg-white;
+        }
+      }
+    }
+  }
+}
+
+.section-tags {
+  padding: 1.25em 0;
+
+  .tags-wrapper {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+  }
+  .tags-title {
+    color: $color-copy-dark;
+    opacity: 0.5;
+    text-transform: uppercase;
+    font-weight: 700;
+    letter-spacing: 0.1em;
+    margin: 0 1.625em 0 0;
+  }
+
+  .menu {
+    padding-left: 0;
+    margin: 0;
+    list-style: none;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+  }
+
+  .menu-item-link {
+    display: block;
+    padding: 0.5em 1em;
+    text-decoration: none;
+
+    .heading-title {
+      color: $color-copy-dark;
+      text-transform: uppercase;
+      font-weight: 700;
+      letter-spacing: 0.1em;
+      margin: 0;
+    }
+  }
 }
 
-.section-tags{
-    padding: 1.25em 0;
-    
-    .tags-wrapper{
-        width: 100%;
-        display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
-
-    }
-    .tags-title{
-        color: $color-copy-dark;
-        opacity: 0.5;
-        text-transform: uppercase;
-        font-weight: 700;
-        letter-spacing: 0.1em;
-        margin: 0 1.625em 0 0;
-    }
-
-    .menu{
-        padding-left: 0;
-        margin: 0;
-        list-style: none;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
-    }
-
-    .menu-item-link{
-        display: block;
-        padding: 0.5em 1em;
-        text-decoration: none;
-
-        .heading-title{
-        color: $color-copy-dark;
-        text-transform: uppercase;
-        font-weight: 700;
-        letter-spacing: 0.1em;
-        margin: 0;
-        }
-    }
-}
-
-.section-posted{
-    .posted-article{
-        margin-top: 4.375em;
-    }
+.section-posted {
+  .posted-article {
+    margin-top: 4.375em;
+  }
 }
