--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -6,12 +6,17 @@
   position: fixed;
   z-index: 1;
   padding: 0 2em;
+
+  @media (max-width: $breakpoint-medium) {
+    padding: 0;
+    max-height: 4.75em;
+  }
 }
 
-.site-header-primary { 
+.site-header-primary {
   background: $color-bg-white;
 
-.site-header-inner {
+  .site-header-inner {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -36,44 +41,63 @@
         }
       }
     }
-  }
 
-  
-.site-navigation-primary{
-  .menu{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding-left: 0;
-    list-style: none;
-    margin: 0;
-  }
-
-  .menu-item{
-    &:not(:last-child){
-      margin-right: 1.375em;
+    .mobile-menu {
+      display: none;
     }
 
-    box-shadow: $shadow-primary;
+    @media (max-width: $breakpoint-medium) {
+      padding: 0.25em 0;
+
+      .mobile-menu {
+        display: block;
+        padding: 1.25em;
+      }
+
+      .site-branding {
+        padding-left: 1.25em;
+      }
+    }
   }
 
-  .menu-item-link{
-    border: 2px solid $color-copy-dark;
-    width: 2.625em;
-    height: 2.625em;
-    padding: 0.75em;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;   
+  .site-navigation-primary {
+    .menu {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      padding-left: 0;
+      list-style: none;
+      margin: 0;
+    }
+
+    .menu-item {
+      &:not(:last-child) {
+        margin-right: 1.375em;
+      }
+
+      box-shadow: $shadow-primary;
+    }
+
+    .menu-item-link {
+      border: 2px solid $color-copy-dark;
+      width: 2.625em;
+      height: 2.625em;
+      padding: 0.75em;
+      box-sizing: border-box;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+    }
+
+    @media (max-width: $breakpoint-medium) {
+      display: none;
+    }
   }
 }
 
-}
-
-.search-wrapper{
+.search-wrapper {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -86,11 +110,11 @@
   border: 2px solid $color-copy-dark;
   box-shadow: $shadow-primary;
 
-  .search-input{
-    &::placeholder{
-    color: $color-copy-dark;
+  .search-input {
+    &::placeholder {
+      color: $color-copy-dark;
     }
-    
+
     outline: none;
     border: none;
     font-family: $font-primary;
@@ -99,16 +123,20 @@
     line-height: 1;
   }
 
-  .search-icon{
+  .search-icon {
     width: 1em;
     height: 1em;
   }
+
+  @media (max-width: $breakpoint-medium) {
+    display: none;
+  }
 }
 
-.site-header-secondary{
+.site-header-secondary {
   background-color: $color-copy-dark;
 
-  .site-header-inner{
+  .site-header-inner {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -119,8 +147,8 @@
     box-sizing: content-box;
   }
 
-  .site-navigation-secondary{
-    .menu{
+  .site-navigation-secondary {
+    .menu {
       display: flex;
       flex-direction: row;
       justify-content: space-between;
@@ -130,15 +158,18 @@
       margin: 0;
     }
 
-    .menu-item-link{
+    .menu-item-link {
       text-transform: uppercase;
       font-family: $font-primary;
       font-size: 1.125em;
       font-weight: 700;
       letter-spacing: 0.125em;
       text-decoration: none;
-      color:$color-bg-white;
+      color: $color-bg-white;
       padding: 0 2.875em;
     }
+  }
+  @media (max-width: $breakpoint-medium) {
+    display: none;
   }
 }
