fix mobile and desktop styles for component article with modifier article-card

--- a/src/sass/components/_section-heading.scss
+++ b/src/sass/components/_section-heading.scss
@@ -1,12 +1,12 @@
-.heading-underline{
+.heading-underline {
   position: relative;
-&:after{
-  content:'';
-  position:absolute;
-  z-index: -1;
-  top:0.5em;
-  left:0;
-  width:100%;
-  border-bottom: 10px solid $color-primary;
+  &:after {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: 0.5em;
+    left: 0;
+    width: 100%;
+    border-bottom: 10px solid $color-primary;
   }
 }
