--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -4,6 +4,7 @@ $color-copy-dark: #000000;
 $color-primary: #ffe600;
 $color-bg-white: #ffffff;
 $color-bg-muted: #1c1c1c;
+$color-gray: #363636;
 
 // fonts
 $font-primary: "Roboto Condensed", sans-serif;
