--- a/src/sass/components/_article.scss
+++ b/src/sass/components/_article.scss
@@ -2,22 +2,17 @@
   width: 100%;
 }
 
-.article-thumbnail {
+.article-card {
   position: relative;
   width: 100%;
-  height: 0;
-  padding-top: 21%;
+  max-width: 36.875em;
 
-  &.thumbnail-border {
-    margin: 0 0 0 auto;
+  &:not(:first-child) {
+    margin-left: 1.25em;
   }
 
-  .thumbnail {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    object-fit: cover;
+  &:not(:last-child) {
+    margin-right: 1.25em;
   }
 
   .thumbnail-title {
@@ -31,6 +26,10 @@
     margin-left: 1.875em;
     margin-right: 1.875em;
     text-transform: uppercase;
+  }
+
+  .article-tag {
+    display: none;
   }
 
   @media (max-width: $breakpoint-super-large) {
@@ -53,46 +52,133 @@
       line-height: 1rem;
     }
   }
+
+  @media (max-width: $breakpoint-medium) {
+    max-width: 100%;
+
+    &:first-child {
+      margin: 0;
+
+      .article-thumbnail {
+        max-height: 19.625em;
+        padding-top: 50%;
+      }
+
+      .thumbnail {
+        height: calc(100% - 4em);
+      }
+
+      .thumbnail-title {
+        width: 100%;
+        padding: 1em 1.625em;
+        bottom: 0;
+        margin: 0;
+        height: 4em;
+        background-color: $color-bg-muted;
+        color: $color-bg-white;
+      }
+    }
+
+    &:not(:first-child) {
+      background-color: $color-copy-dark;
+      display: grid;
+      grid-template-columns: 2fr 3fr;
+      grid-column-gap: 1em;
+      grid-template-rows: auto 1fr;
+      margin: 0;
+      padding: 1em;
+
+      .article-thumbnail {
+        grid-row: 1/3;
+      }
+
+      .thumbnail-title {
+        margin: 0;
+        background-color: $color-copy-dark;
+        color: $color-bg-white;
+        position: inherit;
+        line-height: 1.125;
+        text-align: start;
+      }
+
+      .article-tag {
+        display: block;
+        margin: 0 0 0.625em 0;
+        grid-row: 1/2;
+        text-decoration: none;
+
+        .tag-title {
+          color: $color-primary;
+          text-transform: uppercase;
+          font-weight: 700;
+          letter-spacing: 0.1em;
+          margin: 0;
+          position: relative;
+          z-index: 0;
+          width: fit-content;
+
+          &:after {
+            content: "";
+            position: absolute;
+            z-index: -1;
+            top: 0.5em;
+            left: 0;
+            width: 100%;
+            border-bottom: 10px solid $color-gray;
+          }
+        }
+      }
+    }
+  }
+}
+
+.article-thumbnail {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-top: calc(100% * 2 / 3);
+
+  &.thumbnail-border {
+    margin: 0 0 0 auto;
+  }
+
+  .thumbnail {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    object-fit: cover;
+  }
 }
 
 .thumbnail-border {
-  padding-top: calc(100% - 22.5em);
-  box-shadow: 0 40px 0 -24px;
-  max-width: 33.75em;
-  height: 100%;
-  max-height: 22.5em;
+  padding-top: calc((100% * 2 / 3));
+  box-shadow: 0 2.5em 0 -1.5em;
+
+  .thumbnail {
+    clip-path: polygon(12% 0, 100% 0, 100% 100%, 0 100%, 0% 18%);
+  }
 }
 
 .border-piece {
   position: absolute;
   top: 0;
-  width: 0;
-  height: 0;
-  border-top: 0px solid transparent;
-  border-bottom: 70px solid transparent;
-  border-left: 70px solid $color-bg-white;
+  left: 0;
+  content: "";
+  display: block;
+  border-top: 4.1875em solid transparent;
+  border-right: 4.1875em solid $color-primary;
 
-  &::before {
+  &::after {
     position: absolute;
-    top: 1.375em;
-    left: -3em;
+    top: -2.75em;
+    left: 1.25em;
     width: 1.5625em;
     height: 1.5625em;
     content: "";
     display: block;
     background-color: $color-copy-dark;
-  }
-
-  &::after {
-    position: absolute;
-    top: 0;
-    left: -4.4375em;
-    width: 4.375em;
-    height: 4.375em;
-    content: "";
-    display: block;
-    border-top: 70px solid transparent;
-    border-right: 70px solid $color-primary;
+    z-index: -1;
   }
 }
 
