--- a/src/sass/components/_article.scss
+++ b/src/sass/components/_article.scss
@@ -28,10 +28,6 @@
     text-transform: uppercase;
   }
 
-  .article-tag {
-    display: none;
-  }
-
   @media (max-width: $breakpoint-super-large) {
     .thumbnail-title {
       font-size: 1.25rem;
@@ -65,7 +61,7 @@
       }
 
       .thumbnail {
-        height: calc(100% - 4em);
+        height: 100%;
       }
 
       .thumbnail-title {
@@ -99,36 +95,60 @@
         position: inherit;
         line-height: 1.125;
         text-align: start;
-      }
-
-      .article-tag {
-        display: block;
-        margin: 0 0 0.625em 0;
-        grid-row: 1/2;
-        text-decoration: none;
-
-        .tag-title {
-          color: $color-primary;
-          text-transform: uppercase;
-          font-weight: 700;
-          letter-spacing: 0.1em;
-          margin: 0;
-          position: relative;
-          z-index: 0;
-          width: fit-content;
-
-          &:after {
-            content: "";
-            position: absolute;
-            z-index: -1;
-            top: 0.5em;
-            left: 0;
-            width: 100%;
-            border-bottom: 10px solid $color-gray;
-          }
-        }
+        text-transform: none;
       }
     }
+  }
+}
+
+.article-tag {
+  display: none;
+  margin: 0 0 0.5em 0;
+  grid-row: 1/2;
+  text-decoration: none;
+
+  .tag-title {
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 0.875em;
+    letter-spacing: 0.1em;
+    margin: 0;
+    position: relative;
+    z-index: 0;
+    width: fit-content;
+
+    &:after {
+      content: "";
+      position: absolute;
+      z-index: -1;
+      top: 0.5em;
+      left: 0;
+      width: 100%;
+    }
+  }
+
+  &-dark-mode {
+    .tag-title {
+      color: $color-primary;
+
+      &::after {
+        border-bottom: 10px solid $color-gray;
+      }
+    }
+  }
+
+  &-white-mode {
+    .tag-title {
+      color: $color-copy-dark;
+
+      &::after {
+        border-bottom: 10px solid $color-primary;
+      }
+    }
+  }
+
+  @media (max-width: $breakpoint-medium) {
+    display: block;
   }
 }
 
@@ -218,5 +238,29 @@
     font-size: 1.125em;
     font-weight: 400;
     line-height: 1.375;
+  }
+}
+
+@media (max-width: $breakpoint-medium) {
+  .autor-wrapper,
+  .article-exept,
+  .article-button,
+  .border-piece {
+    display: none;
+  }
+
+  .thumbnail-border {
+    box-shadow: none;
+
+    .thumbnail {
+      clip-path: none;
+    }
+  }
+
+  .article-title {
+    margin: 0.5em 0 0 0;
+    font-size: 1em;
+    line-height: 1.125;
+    text-transform: none;
   }
 }
