--- a/src/sass/components/_article.scss
+++ b/src/sass/components/_article.scss
@@ -1,5 +1,25 @@
 .article {
   width: 100%;
+
+  &-dark-mode {
+    .meta-tag {
+      color: $color-primary;
+
+      &::after {
+        border-bottom: 10px solid $color-gray;
+      }
+    }
+  }
+
+  &-white-mode {
+    .meta-tag {
+      color: $color-copy-dark;
+
+      &::after {
+        border-bottom: 10px solid $color-primary;
+      }
+    }
+  }
 }
 
 .article-categorie {
@@ -38,6 +58,25 @@
   }
 }
 
+.article-title {
+  font-weight: 700;
+  font-size: 1.625em;
+  text-transform: uppercase;
+  margin: 1.25rem 0 0 0;
+
+  @media (max-width: $breakpoint-normal) {
+    font-size: 1.75em;
+  }
+
+  @media (max-width: $breakpoint-small) {
+    font-size: 1.25em;
+  }
+
+  @media (max-width: $breakpoint-extra-small) {
+    font-size: 1em;
+  }
+}
+
 .article-card {
   position: relative;
   width: 100%;
@@ -51,37 +90,37 @@
     margin-right: 1.25em;
   }
 
-  .thumbnail-title {
-    background-color: $color-bg-white;
+  .article-title-wrapper {
+    position: absolute;
+    bottom: 1.625em;
+    padding: 0 1.875em;
+    text-align: center;
+  }
+
+  .article-title {
     color: $color-copy-dark;
+    background-color: $color-bg-white;
     font-weight: 700;
     font-size: 1.5em;
-    text-align: center;
-    position: absolute;
-    bottom: 0;
-    margin-left: 1.875em;
-    margin-right: 1.875em;
     text-transform: uppercase;
+    display: inline;
+    line-height: 1.5;
+    box-shadow: 0px 0px 0 0.25em $color-bg-white;
   }
 
   @media (max-width: $breakpoint-super-large) {
-    .thumbnail-title {
+    .article-title-wrapper {
+      padding: 0 1em;
+    }
+
+    .article-title {
       font-size: 1.25rem;
-      line-height: 1.25rem;
     }
   }
 
   @media (max-width: $breakpoint-extra-large) {
-    .thumbnail-title {
-      margin-left: 1em;
-      margin-right: 1em;
-    }
-  }
-
-  @media (max-width: $breakpoint-large) {
-    .thumbnail-title {
+    .article-title {
       font-size: 1rem;
-      line-height: 1rem;
     }
   }
 
@@ -100,14 +139,25 @@
         height: 100%;
       }
 
-      .thumbnail-title {
-        width: 100%;
+      .article-title-wrapper {
         padding: 1em 1.625em;
         bottom: 0;
         margin: 0;
-        height: 4em;
         background-color: $color-bg-muted;
         color: $color-bg-white;
+        width: fit-content;
+        height: fit-content;
+        box-sizing: content-box;
+      }
+
+      .article-title {
+        background-color: $color-bg-muted;
+        color: $color-bg-white;
+        box-shadow: none;
+      }
+
+      .article-meta {
+        display: none;
       }
     }
 
@@ -118,73 +168,87 @@
       grid-column-gap: 1em;
       grid-template-rows: auto 1fr;
       margin: 0;
-      padding: 1em;
+      padding: 1em 1em 0 1em;
+
+      &:last-child {
+        padding: 1em;
+      }
 
       .article-thumbnail {
         grid-row: 1/3;
       }
 
-      .thumbnail-title {
+      .article-title-wrapper {
+        position: inherit;
+        bottom: 0;
+        padding: 0;
+        text-align: start;
+      }
+
+      .article-title {
         margin: 0;
         background-color: $color-copy-dark;
         color: $color-bg-white;
         position: inherit;
         line-height: 1.125;
-        text-align: start;
         text-transform: none;
+        box-shadow: none;
       }
+    }
+
+    .article-title {
+      font-size: 1.625em;
+    }
+  }
+
+  @media (max-width: $breakpoint-normal) {
+    .article-title {
+      font-size: 1.75em;
+    }
+  }
+
+  @media (max-width: $breakpoint-small) {
+    .article-title {
+      font-size: 1.25em;
+    }
+  }
+
+  @media (max-width: $breakpoint-extra-small) {
+    .article-title {
+      font-size: 1em;
     }
   }
 }
 
-.article-tag {
+.article-meta {
   display: none;
   margin: 0 0 0.5em 0;
   grid-row: 1/2;
   text-decoration: none;
 
-  .tag-title {
-    text-transform: uppercase;
-    font-weight: 700;
-    font-size: 0.875em;
-    letter-spacing: 0.1em;
-    margin: 0;
-    position: relative;
-    z-index: 0;
-    width: fit-content;
-
-    &:after {
-      content: "";
-      position: absolute;
-      z-index: -1;
-      top: 0.5em;
-      left: 0;
-      width: 100%;
-    }
-  }
-
-  &-dark-mode {
-    .tag-title {
-      color: $color-primary;
-
-      &::after {
-        border-bottom: 10px solid $color-gray;
-      }
-    }
-  }
-
-  &-white-mode {
-    .tag-title {
-      color: $color-copy-dark;
-
-      &::after {
-        border-bottom: 10px solid $color-primary;
-      }
-    }
-  }
-
   @media (max-width: $breakpoint-medium) {
     display: block;
+  }
+}
+
+.meta-tag {
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 0.875em;
+  letter-spacing: 0.1em;
+  margin: 0;
+  position: relative;
+  z-index: 0;
+  width: fit-content;
+  font-family: $font-primary;
+
+  &:after {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: 0.5em;
+    left: 0;
+    width: 100%;
   }
 }
 
@@ -260,13 +324,6 @@
   }
 }
 
-.article-title {
-  font-weight: 700;
-  font-size: 1.625em;
-  text-transform: uppercase;
-  margin: 1.25rem 0 0 0;
-}
-
 .article-exept {
   margin: 1.875em 0 2.375em 0;
 
@@ -295,7 +352,7 @@
 
   .article-title {
     margin: 0.5em 0 0 0;
-    font-size: 1em;
+
     line-height: 1.125;
     text-transform: none;
   }
